[gd_scene load_steps=3 format=3 uid="uid://xeoum148lv7u"]

[ext_resource type="FontFile" uid="uid://rok3l0s3axtu" path="res://fonts/ka1.ttf" id="1_1qbkc"]
[ext_resource type="Script" uid="uid://cwodiopgkv83i" path="res://util/confirm_dialog.gd" id="2_64lko"]

[node name="ConfirmDialog" type="Window"]
process_mode = 2
title = "Confirm building"
initial_position = 2
size = Vector2i(300, 100)
exclusive = true
unresizable = true
popup_window = true
theme_override_fonts/title_font = ExtResource("1_1qbkc")
script = ExtResource("2_64lko")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -44.0
offset_right = 140.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="ErrorLabel" type="Label" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0.501961, 0, 0, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="OkButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
focus_neighbor_right = NodePath("../CancelButton")
theme_override_fonts/font = ExtResource("1_1qbkc")
text = "Ok"

[node name="CancelButton" type="Button" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
focus_neighbor_left = NodePath("../OkButton")
theme_override_fonts/font = ExtResource("1_1qbkc")
text = "Cancel"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/OkButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
